Doc fixes for where-is-internal.
* doc/lispref/keymaps.texi (Scanning Keymaps): Fix description of
NO-REMAP arg to where-is-internal.

* src/keymap.c (where_is_internal): Doc fix (Bug#10872).

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-23  Chong Yidong  <cyd@gnu.org>
+
+	* keymaps.texi (Scanning Keymaps): Fix description of NO-REMAP arg
+	to where-is-internal (Bug#10872).
+
 2012-04-21  Glenn Morris  <rgm@gnu.org>
 
 	* macros.texi (Indenting Macros): Fix typo.
