Remove obsolete usage of (ispell-insert-word)
`ispell-insert-word' is a plain `insert' together with word filtering
through `translation-table-for-input' for character code unification.
This was useful in Emacs 22, but is not needed for Emacs 23 and above
since unification is now direct.

Since XEmacs does not have `translation-table-for-input' there is no
need at all to keep this old code, but use (insert) directly.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-04-23  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
+
+	* ispell.el (ispell-insert-word) Remove unneeded function using
+	obsolete `translation-table-for-input'.
+	(ispell-word, ispell-process-line, ispell-complete-word): Use
+	plain `insert' instead of removed `ispell-insert-word'.
+
 2012-04-22  Chong Yidong  <cyd@gnu.org>
 
 	* cus-edit.el (custom-variable-menu)
