ispell.el,flyspell.el: Preserve session localwords when switching back buffers.
Once a word is declared valid for a session and a buffer it should
stay valid for that buffer regardless buffer switches unless ispell
process is explicitly killed or dictionary changed for that buffer. 

However, it is currently lost when we switch to a different buffer
that triggers a new ispell process and then switch back to the
original buffer (triggering a  new ispell restart). 

These changes try to keep buffer session localwords accepted in above
case.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,21 @@
 2012-04-23  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
 
+	Preserve ispell session localwords when switching back to
+	original buffer.
+
+	* ispell.el (ispell-buffer-session-localwords): New buffer-local
+	variable to hold buffer session localwords.
+	(ispell-kill-ispell): add option 'clear to delete session
+	localwords.
+	(ispell-command-loop, ispell-change-dictionary)
+	(ispell-buffer-local-words): Preserve session localwords when
+	needed.
+
+	* flyspell.el (flyspell-process-localwords, flyspell-do-correct):
+	Preserve session localwords when needed.
+
+2012-04-23  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
+
 	* ispell.el (ispell-insert-word) Remove unneeded function using
 	obsolete `translation-table-for-input'.
 	(ispell-word, ispell-process-line, ispell-complete-word): Use
