Remove non-option variable handling from customize-apropos and enable use of word lists for customize-apropos-options etc.
* lisp/apropos.el (apropos-read-pattern): Make prompt less cryptic.

* lisp/cus-edit.el (customize-apropos, customize-apropos-options):
Disable matching of non-option variables.
(customize-option, customize-option-other-window)
(customize-changed-options): Doc fix.
(customize-apropos-options, customize-apropos-faces)
(customize-apropos-groups): Use apropos-read-pattern.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -78,6 +78,10 @@ character when doing minibuffer filename prompts.
 
 *** `custom-reset-button-menu' now defaults to t.
 
+*** Non-option variables are never matched in `customize-apropos' and
+`customize-apropos-options' (i.e. the prefix argument does nothing for
+these commands now).
+
 ** erc will look up server/channel names via auth-source and use the
 channel keys found, if any.
 
