--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-23  Juanma Barranquero  <lekktu@gmail.com>
+
+	* gnutls.c (init_gnutls_functions): The value of :loaded-from is
+	now a cons (bug#11311).
+
 2012-04-23  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Do not create empty overlays with the evaporate property (Bug#9642).
