* lisp/ibuf-ext.el (ibuffer-list-buffer-modes): Add `include-parents' arg. (ibuffer-filter-by-derived-mode): New filter. * lisp/ibuffer.el (ibuffer-mode-map): Bind to `/ w'.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -74,6 +74,8 @@ character when doing minibuffer filename prompts.
 
 * Changes in Specialized Modes and Packages in Emacs 24.2
 
+** New `derived-mode' filter for Ibuffer, bound to `/ w'.
+
 ** Apropos
 
 *** The faces used by Apropos are now directly customizable.
