* lisp/ibuffer.el (ibuffer-mode-map): Bind `/ m' to filter-used-mode and `/ M' to filter-derived-mode. * lisp/ibuf-ext.el (ibuffer-list-buffer-modes): Simplify; avoid add-to-list. (ibuffer-filter-by-mode, ibuffer-filter-by-used-mode) (ibuffer-mark-by-mode): Use default rather than initial-input. (ibuffer-filter-by-derived-mode): Autoload and require-match.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -74,7 +74,8 @@ character when doing minibuffer filename prompts.
 
 * Changes in Specialized Modes and Packages in Emacs 24.2
 
-** New `derived-mode' filter for Ibuffer, bound to `/ w'.
+** New `derived-mode' filter for Ibuffer, bound to `/ M'.
+`/ m' is now bound to filter by used-mode, which used to be bound to `/ M'.
 
 ** Apropos
 
