--- a/etc/NEWS
+++ b/etc/NEWS
@@ -157,6 +157,11 @@ The function `user-variable-p' is now an obsolete alias for
 ** `face-spec-set' no longer sets frame-specific attributes when the
 third argument is a frame (that usage was obsolete since Emacs 22.2).
 
++++
+** The arguments of `dbus-register-signal' are no longer just strings,
+but keywords or keyword-string pairs.  The old argument list will
+still be supported for Emacs 24.x.
+
 
 * Lisp changes in Emacs 24.2
 
