--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* os.texi: (Notifications): Add notifications-get-capabilities.
+
 2012-04-20  Chong Yidong  <cyd@gnu.org>
 
 	* processes.texi (Asynchronous Processes): Mention nil argument to
