--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-04-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* notifications.el (notifications-interface)
+	(notifications-notify-method, notifications-notify)
+	(notifications-close-notification-method): Fix docstring.
+	(notifications-get-capabilities-method): New defconst.
+	(notifications-get-capabilities): New defun.
+
 2012-04-24  Leo Liu  <sdl.web@gmail.com>
 
 	* progmodes/python.el: Move hideshow setup to the end.
