* lisp/progmodes/ruby-mode.el: Handle Cucumber defs (bug#6286). (ruby-syntax-propertize-regexp): New function. (ruby-syntax-propertize-function): Use it to handle regexp not preceded by a special keyword.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,10 @@
 2012-04-24  Dmitry Gutov  <dgutov@yandex.ru>
 
+	* progmodes/ruby-mode.el: Handle Cucumber defs (bug#6286).
+	(ruby-syntax-propertize-regexp): New function.
+	(ruby-syntax-propertize-function): Use it to handle regexp not preceded
+	by a special keyword.
+
 	* progmodes/ruby-mode.el: Handle general delimited literals (bug#6286).
 	(ruby-syntax-general-delimiters-goto-beg)
 	(ruby-syntax-propertize-general-delimiters): New functions.
