* notifications.el (notifications-specification-version): Change to "1.2". (notifications-notify): Add :action-items, :resident and :transient hints.  Change "image_data" to "image-data" and "image_path" to "image-path". (notifications-get-capabilities): Return a list of keywords.
* os.texi (Notifications): Extend possible notification hints.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,6 +1,7 @@
 2012-04-24  Michael Albinus  <michael.albinus@gmx.de>
 
-	* os.texi: (Notifications): Add notifications-get-capabilities.
+	* os.texi (Notifications): Extend possible notification hints.
+	Add notifications-get-capabilities.
 
 2012-04-20  Chong Yidong  <cyd@gnu.org>
 
