--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -22,10 +22,14 @@
 
 2012-04-24  Michael Albinus  <michael.albinus@gmx.de>
 
-	* notifications.el (notifications-interface)
-	(notifications-notify-method, notifications-notify)
+	* notifications.el (notifications-specification-version): Change
+	to "1.2".
+	(notifications-interface, notifications-notify-method)
 	(notifications-close-notification-method): Fix docstring.
 	(notifications-get-capabilities-method): New defconst.
+	(notifications-notify): Add :action-items, :resident and
+	:transient hints.  Change "image_data" to "image-data" and
+	"image_path" to "image-path".
 	(notifications-get-capabilities): New defun.
 
 2012-04-24  Leo Liu  <sdl.web@gmail.com>
