--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-25  Chong Yidong  <cyd@gnu.org>
+
+	* cus-edit.el (custom-buffer-create-internal): Update header text.
+
 2012-04-25  Eli Zaretskii  <eliz@gnu.org>
 
 	* progmodes/gdb-mi.el (gdb-init-1): Condition Windows-specific
