--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-04-25  Chong Yidong  <cyd@gnu.org>
+
+	* vc/diff-mode.el (diff-setup-whitespace): New function.
+	(diff-mode): Use it.
+
+	* vc/diff.el (diff-sentinel):
+	* vc/vc.el (vc-diff-finish): Call diff-setup-whitespace to assign
+	Whitespace mode variables based on diff style (Bug#8612).
+
 2012-04-25  Leo Liu  <sdl.web@gmail.com>
 
 	* files.el (auto-mode-alist): Use javascript-mode instead.
