--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -9,6 +9,9 @@
 
 2012-04-25  Leo Liu  <sdl.web@gmail.com>
 
+	* progmodes/python.el (python-send-region): Add suffix .py to the
+	temp file.
+
 	* files.el (auto-mode-alist): Use javascript-mode instead.
 
 2012-04-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>
