--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-25  Leo Liu  <sdl.web@gmail.com>
+
+	* progmodes/python.el (python-pdbtrack-get-source-buffer): Use
+	compilation-message if available to find real filename.
+
 2012-04-25  Chong Yidong  <cyd@gnu.org>
 
 	* vc/diff-mode.el (diff-setup-whitespace): New function.
